--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
-  text-align: center;
+/* App.css */
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  background-color: #f4f4f4;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+#root {
+  /* 모바일 화면 크기를 고정 */
+  width: 450px; /* iPhone 12와 같은 모바일 화면 너비 */
+  height: "100%"; /* iPhone 12와 같은 모바일 화면 높이 */
   min-height: 100vh;
+  margin: 0 auto; /* 화면 중앙에 위치 */
+  background-color: #fff;
+  border: 1px solid #ccc; /* 데스크톱에서 확인용으로 테두리 */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* 데스크톱에서 모바일처럼 보이도록 그림자 */
+  --vh: 100%;
+}
+
+.container {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  align-items: center;
+  width: "100%";
+  height: "100%";
+  padding-bottom: 30px;
+  padding-left: 30px;
+  padding-right: 30px;
+  box-sizing: border-box;
 }
