--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@ body {
   width: "100%";
   height: "100%";
   padding-bottom: 30px;
-  padding-left: 30px;
-  padding-right: 30px;
+  /* padding-left: 30px;
+  padding-right: 30px; */
   box-sizing: border-box;
 }
