--- a/src/App.css
+++ b/src/App.css
@@ -24,10 +24,10 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: "100%";
-  height: "100%";
-  padding-bottom: 30px;
-  /* padding-left: 30px;
-  padding-right: 30px; */
+  width: "100%"; /* iPhone 12와 같은 모바일 화면 너비 */
+  height: "100%"; /* iPhone 12와 같은 모바일 화면 높이 */
+  padding-bottom: 10px;
+  padding-left: 16px;
+  padding-right: 16px;
   box-sizing: border-box;
 }
