리뷰, 장바구니 기능 추가

--- a/src/App.css
+++ b/src/App.css
@@ -8,17 +8,17 @@ body {
 }
 
 #root {
-  /* 모바일 화면 크기를 고정 */
-  width: 360px; /* iPhone 12와 같은 모바일 화면 너비 */
-  height: "100%"; /* iPhone 12와 같은 모바일 화면 높이 */
+  width: 100%; /* 기본값으로 100% 설정 */
+  max-width: 360px; /* 최대 너비를 360px로 제한 */
+  min-width: 320px; /* 최소 너비 설정 */
+  height: "100%";
   min-height: 100vh;
-  margin: 0 auto; /* 화면 중앙에 위치 */
+  margin: 0 auto;
   background-color: #fff;
-  border: 1px solid #ccc; /* 데스크톱에서 확인용으로 테두리 */
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* 데스크톱에서 모바일처럼 보이도록 그림자 */
+  border: 1px solid #ccc;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   --vh: 100%;
 }
-
 .container {
   display: flex;
   flex-direction: column;
